--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 	
 </head>
 
@@ -97,5 +97,5 @@
 
    
         
-        <script src="../script/script.js" type="text/javascript"></script>
+        <script src="script/script.js" type="text/javascript"></script>
 </html>
